# rastir

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  V2_requirements.md  V2_server_requirements.md  V3_requirements.md  V4_requirements.md  adapters_requirements.md  bench_server.py  configuration_requirements.md  dashboard_req.md  deployment_requirements.md  pyproject.toml  rastir-deploy.yaml  rastir-server-config.yaml  server_requirement.md
.github/workflows/: build-server-image.yml
Requirement and Design/: V3_requirements.md  V4_eval_redact_requirements.md  V4_requirements.md  V5_remote_tracing_requirements.md  V6_requirements.md  V7_requirements.md  V8_config_sampling_requirements.md  patch1_requirements.md  prom_requirements.md  requirements.md  roadmap.md
deploy/docker/: dashboards  deploy.sh  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
deploy/docker/rules/: alerts.yaml  rastir-sre-rules.yml
deploy/ecs/: adot-config.yaml  adot-config.yaml.example  config.env.example  config.json.example  deploy.sh  port-forward.sh  template.yaml
deploy/k8s/: Chart.yaml  deploy.sh  generate-dashboard-configmap.sh  values.yaml
deploy/k8s/templates/: _helpers.tpl  grafana-config.yaml  grafana-dashboards.yaml  grafana.yaml  namespace.yaml  otel-collector-configmap.yaml  prometheus-rules.yaml  prometheus.yaml  rastir-server.yaml  tempo.yaml
deploy/prometheus/ecs/: Dockerfile  config.json.example  deploy.sh  entrypoint.sh  port-forward.sh  prometheus.yml  template.yaml
deploy/prometheus/eks/: deployment.yaml  kustomization.yaml  namespace.yaml  prometheus.yml  pvc.yaml  service.yaml
deploy/terraform/aws/: deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/terraform/azure/: deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/terraform/gcp/: deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: _config.yml  adapters.md  architecture-responsibilities.md  aws-verification-procedure.md  configuration.md  contributing-adapters.md  crewai.md  dashboards.md  decorators.md  deployment.md  environment-variables.md  getting-started.md  index.md  mcp-tracing.md  metrics.md  server.md  wrap.md
docs/_sass/color_schemes/: dark.scss  rastir-dark.scss
docs/_sass/custom/: custom.scss
docs/frameworks/: adk.md  crewai.md  index.md  langgraph.md  llamaindex.md  strands.md
grafana/: docker-compose.yml  prometheus.yml  tempo.yaml
grafana/dashboards/: agent-tool.json  cost-ttft.json  evaluation.json  guardrail.json  llm-performance.json  sre-budgets.json  system-health.json
grafana/prometheus/: prometheus.yml
grafana/provisioning/dashboards/: dashboards.yaml
rastir-config-ui/: Dockerfile  README.md  nginx.conf
rastir-config-ui/public/: app.js  index.html
rastir-config-ui/src/: app.js
scripts/: fix_dashboards.py  load_test.py  load_test_all.py  verify_dashboards.py
src/rastir/: __init__.py  adk_support.py  config.py  context.py  crewai_support.py  decorators.py  framework_base.py  langgraph_support.py  llamaindex_support.py  llm_discovery.py  pricing.py  queue.py  remote.py  spans.py  strands_support.py  transport.py  wrapper.py
src/rastir/adapters/: __init__.py  anthropic.py  azure_openai.py  bedrock.py  cohere.py  crewai.py  fallback.py  gemini.py  groq.py  langchain.py  langgraph.py  llamaindex.py  mistral.py  openai.py  registry.py  retrieval.py  tool.py  types.py
src/rastir/cli/: __init__.py  config.py  (+2 more)
tests/: test_adapters.py  test_adk_support.py  test_config.py  test_crewai_support.py  test_decorators.py  test_framework_base.py  test_integration.py  test_integration_all.py  test_langgraph_integration.py  test_langgraph_support.py  test_llamaindex_support.py  test_llm_discovery.py  test_pricing.py  test_queue.py  test_remote.py  test_server.py  test_server_v2_remaining.py  test_spans_context.py  test_sre_engine.py  test_strands_support.py  test_transport.py  test_wrapper.py
tests/e2e/: common.py  generate_errors.py  mcp_test_server.py  run_all_combinations.py  run_e2e.py  run_part2_verification.py  run_success_requests.py  test_adk_e2e.py  test_crewai_bedrock_e2e.py  test_crewai_e2e.py  test_crewai_error_e2e.py  test_evaluation_e2e.py  test_evaluation_quick.py  test_langchain_e2e.py  test_langgraph_bedrock_e2e.py  test_langgraph_e2e.py  test_langgraph_error_e2e.py  test_langgraph_manual_e2e.py  test_langgraph_openai_e2e.py  test_llamaindex_bedrock_e2e.py  test_llamaindex_e2e.py  test_strands_e2e.py  test_strands_streaming_ttft.py  verify_crewai.py  verify_llamaindex.py
tests/integration/: INTEGRATION_TESTS.md  compare_otlp_spans.py  test_cost_ttft_e2e.py  test_crewai_e2e.py  test_load_agents.py  test_load_v2.py  test_mcp_e2e.py  test_mcp_remote.py
(+43 files in other folders)
